@@ -1,3 +1,7 @@
+2019-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix ignore system language on Windows
+
 2019-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Hide current angle unit from result
